Akeeba Data Compliance 3.0.3
================================================================================
~ Updated ATS plugin for ATS version 5 and later

Akeeba Data Compliance 3.0.2
================================================================================
# [HIGH] Cannot install on Joomla! 4.1
# [HIGH] Unhandled exception when you have turned off email sending in your site's Global Configuration
# [LOW] PHP 8.1 Notice when checking whether the user has agreed to the site's terms

Akeeba Data Compliance 3.0.1
================================================================================
# [LOW] Bootstrap 5.1.2 included in Joomla 4.0.4 broke the CSS for Control Panel icons
# [LOW] Bad grammar “consent with” (sic) instead of “consent to” in COM_DATACOMPLIANCE_OPTIONS_CONSENT_PREFERENCELABEL. Thanks, Peter for the heads up!
# [HIGH] Immediate error on the backend on Windows

Akeeba Data Compliance 3.0.0
================================================================================
! Rewritten as a native Joomla 4 component

Akeeba Data Compliance 2.0.4
================================================================================
+ Use Joomla Privacy plugins when removing users

Akeeba Data Compliance 2.0.3
================================================================================
~ Changes in Joomla 4.0.0-RC5 broke the date and time input fields. Now using native HTML 5 controls.
# [HIGH] The Privacy Policy article is not displayed in the data options page
# [HIGH] Uninstallation broken on Joomla 4 due to different installation script event handling.

Akeeba Data Compliance 2.0.2
================================================================================
~ Joomla changed the location of cacert.pem

Akeeba Data Compliance 2.0.1
================================================================================
~ Converted all tables to InnoDB for better performance
~ Updated Charts.js